# pasteOn

./: .gitignore  Readme  Readme.en.md  Readme.md  build-server.js  bundle.js  history copy.html  history.html  index.html  main copy.js  main.js  package copy.json  package-lock.json  package.json  preload.js  tailwind.config.js  vite.config.js  webpack.config.js
ipc/: index.js
others/: menu.js  tray.js
pasteOn_tauri/: package-lock.json  package.json
pasteOn_tauri/src/: index.html
pasteOn_tauri/src-tauri/: Cargo copy.toml  Cargo.toml  tauri.conf.json
pasteOn_tauri/src-tauri/cert/: Cargo.toml  certificate.pem  generate_cert.rs  key.pem
pasteOn_tauri/src-tauri/cert/src/: main.rs
pasteOn_tauri/src-tauri/icons/: icon.icns  macAppIcon.icns
pasteOn_tauri/src-tauri/src/: app.rs  client.rs  main copy 2.rs  main copy 3.rs  main copy 4.rs  main copy 5.rs  main copy.rs  main.rs  mdns copy.rs  mdns.rs  mdns_get_if_addres.rs  mdns_使用zeroconf但是下载LLVM.rs  state.rs  websocket copy 2.rs  websocket copy 3.rs  websocket copy.rs  websocket.rs
shortcuts/: index.js
socket/: server.js  setup.js
src/: App.js  App.jsx  AppModal.js  AppModal.jsx  designPaste copy.html  designPaste.html  index.jsx  tailwind.css
src-front/: README copy.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  textst.html  vite.config.js
src-front/src/: App copy 2.jsx  App copy 3.jsx  App copy.jsx  App.jsx  index.css  main.jsx
src-front/src/controller/: util.jsx
src-front/src/hook/: ConfigContext  copy 2.jsx  ConfigContext  copy.jsx  ConfigContext .jsx  NotificationContext.jsx  useClipboard.jsx  useKeyboardShortcuts .jsx  useKeyboardShortcuts copy.jsx  useKeyboardShortcuts.jsx
src-front/src/models/: WebSocketManager.jsx  itemsManager.jsx
src-front/src/views/: LoadingSpinner.jsx  NotificationBar.jsx  Settings copy 2.jsx  Settings copy 3.jsx  Settings copy.jsx  Settings.jsx
src-front/src/views/files/: FileTransferView copy.jsx  FileTransferView.jsx
src-front/src/views/sets/: ColorSettings.jsx  HistorySettings.jsx  ShortcutSettings.jsx
src/modfier/: LoadingSpinner.jsx
windows/: historyWindow.js  mainWindow.js
