[package]
name = "pasteon_tauri"
version = "0.1.0"
description = "PasteOn"
authors = ["Dong"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "system-tray", "fs-all", "path-all", "os-all", "window-set-size", "macos-private-api", "clipboard-all", "window-set-ignore-cursor-events", "global-shortcut-all", "window-start-dragging", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
mdns-sd = "0.10.5"
chrono = "0.4"
futures = "0.3"
local-ip-address = "0.6.1"
tokio-tungstenite = "0.16.1"
futures-util = "0.3"
uuid = "1.8.0"
ws = "0.9.2"
once_cell = "1.19.0"
os = "0.1.0"
hostname = "0.4.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
windows_subsystem = "windows"  # 这会隐藏命令行窗口


